--- a/cssportfolio/styles.css
+++ b/cssportfolio/styles.css
@@ -26,16 +26,16 @@ button {
     letter-spacing: 0.04em;
 }
 
-/* h1,
+h1,
 h2,
 h3,
 h4,
 p {
     margin: 0;
 
-} */
+} 
 
-/* ul,
+ul,
 ol {
     margin-top: 0;
     margin-bottom: 0;
@@ -45,7 +45,7 @@ ol {
 img {
     display: block;
 }
-*/
+
 .container {
     /* width: 1158px; */
 
