--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 320px;
+    width: 392px;
     min-height: 584px;
     background-color: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -302,7 +302,6 @@ body {
         background: #FFFFFF;
         box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
         border-radius: 0px 0px 4px 4px;
-        margin-bottom: 32px;
         width: 264px;
         margin-left: auto;
         margin-right: auto;
@@ -399,13 +398,19 @@ body {
         margin-right: auto;
     }
 
-    .container-footer {
+    /* .container-footer {
         display: flex;
         flex-direction: column;
 
 
+    } */
+  
+    .footer-logo-list {
+        display: flex;
+        justify-content:center;
+        
+        flex-direction:column;
     }
-
     .paragraf {
         font-family: Roboto;
 
@@ -467,6 +472,11 @@ body {
         background: var(--backgr-color);
     }
 
+}
+@media screen and (max-width: 320px) 
+{.modal 
+  {  width: 320px;
+min-height: 584px;}
 }
 
 @media screen and (max-width: 1157px) and (min-width: 768px) {
